--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "media-utils",
-  "version": "0.0.0",
+  "version": "0.0.1-beta.1",
   "description": "Opinionated collection of user media utils by @dapotatoman",
   "keywords": [
     "media-utils"
