--- a/package.json
+++ b/package.json
@@ -32,29 +32,32 @@
     "*.d.ts"
   ],
   "scripts": {
+    "build:docs": "typedoc --plugin typedoc-plugin-markdown --out docs src/index.ts",
     "build": "rollup -c",
     "dev": "npm run build -- --watch",
     "lint": "eslint \"{src,test}/**/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "pnpm build:docs & pnpm build",
     "release": "bumpp --commit --push --tag && npm publish",
     "start": "esno src/index.ts"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.16.1",
     "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/node": "^17.0.18",
+    "@types/node": "^17.0.21",
     "bumpp": "^7.1.1",
-    "esbuild": "^0.14.21",
-    "eslint": "^8.9.0",
+    "esbuild": "^0.14.25",
+    "eslint": "^8.10.0",
     "esno": "^0.14.1",
-    "rollup": "^2.67.2",
-    "rollup-plugin-dts": "^4.1.0",
+    "rollup": "^2.69.1",
+    "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-esbuild": "^4.8.2",
+    "typedoc": "^0.22.12",
+    "typedoc-plugin-markdown": "^3.11.14",
     "typescript": "^4.5.5",
-    "vite": "^2.8.3"
+    "vite": "^2.8.6"
   }
 }
